--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -11,3 +11,16 @@ body {
 	z-index: 1;
 	width: 200px;
 }
+
+.front-title {
+	margin-top: 100px;
+}
+
+.landing { 
+  background: image-url("wallpaper.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100vh;
+}
